fix(#207): add class to description textarea to prevent layout breaking (#209)
* fix(creat-edit-todo-form): add class to description textarea to prevent layout breaking

* fix(create-todo-form): add max height to description textarea component

* fix(create-edit-todo-form): wrap form in a div with the min width set to
0 to fix layout issues

* fix(create-todo-form): add custom utility to use word-break in textarea

* fix(create-todo-form): remove unecessary div

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,10 @@
   }
 }
 
+@utility break-word {
+  word-break: break-word;
+}
+
 @utility no-scrollbar {
   /* Hide scrollbar for Chrome, Safari, and Opera */
   &::-webkit-scrollbar {
